--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Pycharm configuration settings (can unignore in future if important)
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
